src/objects/Contact_Information__c.object
<CustomObject>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <label>Best Time to Call</label>
        <picklist>
            <picklistValues>
                <fullName>Daytime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anytime</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Information</relationshipLabel>
        <relationshipName>Contact_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Doc Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Information</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>